# arai

./: .env.example  .flake8  .gitignore  .prettierrc  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
patches/: jellycommands@1.0.0-next.43.patch
src/: app.py  debug.py
src/arai/: __init__.py  client.py  database.py
src/arai/cogs/: __init__.py  company.py  dynamic.py  invites.py  logging.py
src/menu/: __init__.py  cog.py  models.py  widget.py
src/menu/widgets/: __init__.py  radio.py  roleselector.py  select.py
src/menus/settings/: menu.yml
src/utils/: __init__.py  bot.py  database.py
