[tool.poetry]
name = "arai"
version = "4.0.0"
description = ""
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
discord-amethyst = "^2.0.0"
pynacl = "^1.5.0"
python = "~3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92
