[tool.poetry]
name = "arai"
version = "4"
description = ""
packages = [{ include = "arai", from = "packages/bot" }]
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]

[tool.poetry.dependencies]
discord-amethyst = "^2.0.0"
pocketbase-async = "^0.9.0"
pynacl = "^1.5.0"
python = "~3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92
